[package]
version = "0.0.1"
name = "differential-evolution2"
authors = ["Baeo Maltinsky <baeo.maltinsky@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

description = """
Simple and powerful global optimization using a self-adapting differential evolution.
"""
keywords = ["evolution", "optimization", "genetic", "DE"]

[dependencies]
rand = "0.7"
rand_xorshift = "0.2"
